--- a/config.py.example
+++ b/config.py.example
@@ -21,5 +21,5 @@ SENTRY_DSN = None
 
 # セッションキー (本番環境では固定の秘密鍵を設定してください)
 # 例: SECRET_KEY = 'your-secret-key-here'
-# 注意: Noneのままにすると開発環境用のランダムキーが使用されます
-SECRET_KEY = None
+# 開発環境用の固定キー（本番環境では変更してください）
+SECRET_KEY = 'dev-secret-key-change-in-production-12345'
